# mind

./: .gitignore  ARCHITECTURE.md  README.md  pyproject.toml
configs/: config.toml
mind/: __init__.py  agent.py  app.py  chat.py  cli.py  commands.py  config.py  context.py  diagnostics.py  llm.py  memory.py  memory_extractor.py  prompt.py  tools.py  workspace.py
mind/agent/: __init__.py  loop.py  prompts.py  protocol.py  result.py  runs.py  trace.py
mind/cli/: __init__.py  commands.py  parser.py
mind/codebase/: __init__.py  files.py
mind/core/: __init__.py  config.py  context.py  diagnostics.py  embeddings.py  json_utils.py  llm.py  prompt.py  router.py  uncensored_prompt.py
mind/memory/: __init__.py  backfill.py  extractor.py  indexing.py  retrieval.py  store.py
mind/project/: devlog.py  status.py
mind/runtime/: __init__.py  ask.py  chat.py  confirmation.py
mind/tools/: __init__.py  codebase.py  git.py  internet.py  memory.py  project.py  registry.py  result.py  spec.py  workspace.py
mind/workspace/: __init__.py  files.py
tests/: test_agent.py  test_app.py  test_chat.py  test_cli.py  test_codebase.py  test_config.py  test_context.py  test_embeddings.py  test_git.py  test_llm.py  test_memory.py  test_memory_backfill.py  test_memory_extractor.py  test_memory_indexing.py  test_memory_retrieval.py  test_prompt.py  test_router.py  test_tools.py  test_workspace.py
