[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mind-local"
version = "0.1.0"
description = "A lightweight local-first personal AI assistant."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "ollama>=0.4.0"
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0"
]

[project.scripts]
mind = "mind.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["mind*"]
